# pydoll-mcp

./: .bandit  .gitignore  .pypirc.example  CHANGELOG.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_v1.5.10.md  Dockerfile  ENVIRONMENT_VARIABLES_GUIDE.md  GITHUB_SECRETS_SETUP.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  PYPI_DEPLOYMENT_STATUS.md  PYPI_TOKEN_ISSUE.md  PYPI_TRUSTED_PUBLISHER_SETUP.md  PYPI_UPLOAD_INSTRUCTIONS.md  PyDoll-MCP-Test-Prompts-EN.md  PyDoll-MCP-Test-Prompts.md  README.md  README_PYPI_DEPLOYMENT.md  REAL_BROWSER_IMPLEMENTATION.md  RELEASE_ANNOUNCEMENT.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.3.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.5.1.md  RELEASE_NOTES_v1.5.10.md  RELEASE_NOTES_v1.5.14.md  RELEASE_NOTES_v1.5.4.md  RELEASE_NOTES_v1.5.6.md  RELEASE_NOTES_v1.5.7.md  RELEASE_NOTES_v1.5.9.md  SECURITY_INCIDENT_RESPONSE.md  SECURITY_SETUP.md  SMITHERY_DEPLOYMENT.md  SMITHERY_MANUAL_SUBMISSION.md  SMITHERY_SUBMISSION_READY.md  docker-compose.yml  (+11 more)
.github/: FUNDING.yml  release_body.md  release_body_v1.5.11.md
.github/workflows/: ci-cd.yml  ci.yml  release-v2.yml  release.yml  test.yml  tests.yml
examples/: advanced_automation.py
pydoll_mcp/: __init__.py  __main__.py  browser_manager.py  claude_setup.py  cli.py  post_install.py  pydoll_integration.py  server.py
pydoll_mcp/models/: __init__.py
pydoll_mcp/tools/: __init__.py  advanced_tools.py  browser_tools.py  element_tools.py  element_tools_backup.py  file_tools.py  navigation_tools.py  network_tools.py  protection_tools.py  screenshot_tools.py  script_tools.py  search_automation.py
release-notes/: DEPLOYMENT_STATUS_v1.5.11.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.1.4.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.5.13.md  RELEASE_NOTES_v1.5.15.md  RELEASE_NOTES_v1.5.2.md  RELEASE_NOTES_v1.5.3.md  RELEASE_NOTES_v1.5.5.md  v1.5.16.md
setup/: setup_claude_unix.sh  setup_claude_windows.bat  setup_unix.sh  setup_windows.bat
test-env/: pyvenv.cfg
test-pydoll-env/: pyvenv.cfg
tests/: test_browser_manager.py  test_tools.py  test_windows_compatibility.py
